--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,7 +5,7 @@
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import url("fontawesome-all.min.css");
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("../css/gfonts/Lato.css");
 
 /*
 	Twenty by HTML5 UP
